# texture-blending

./: .gitignore  CMakeLists.txt  LICENSE  README.md
blending/: main.cpp  opengl.cpp  opengl.hpp  quad.cpp  quad.hpp  rtexception.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  viewer.cpp  viewer.hpp
shaders/: simple.frag  simple.vert
